# bees

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml  model_data.txt  pyproject.toml  requirements.txt
jobs/: unet_bced.sh  unet_kernel.sh  unet_train.sh  wingai_yolo26n.sh  wings_crop.sh
notebooks/: 01_visualize.ipynb  02_vision_transformer.ipynb  03_preprocess_rectangle.ipynb  04_save_datasets.ipynb  05_masks_coords.ipynb  06_unet.ipynb  07_unet_rectangle_masks.ipynb  08_unet_preprocess.ipynb  09_GPA_impl.ipynb  10_GPA_statistics.ipynb  11_pulawy_statistics.ipynb  12_skrzydla_BM_statistics.ipynb  13_pulawy_statistics_new_coord_function.ipynb  13_statistics.ipynb  14_detection_dataset.ipynb  14_pad_wing_image.ipynb  15_process_bounding_box.ipynb  16_test_detection.ipynb  17_process_cropped_images.ipynb  18_pytotch_pretrained_unet_weights.ipynb  19_new_statistics.ipynb  20_positional_precision.ipynb  21_deepwings_dataset.ipynb  22_rotate_dataset.ipynb  23_augmented_dataset_precision.ipynb  unet.ipynb  visualize.ipynb
reports/: landmark_error_histogram_augmented.csv  landmark_errors_augmented.csv
reports/yolo26m-train-run-1/: results.csv
wings/: config.py  dataset.py  download.py  gpa.py  utils.py
wings/app/: __init__.py  app.py  demo.py  images.py  test_benchmark.py  utils.py  website.py  website2.py
wings/detection/: augment_dataset.py  dataset.py  process_dataset.py  train.py
wings/modeling/: litnet.py  loss.py  models.py  rect_training.py  resnet_training.py  train.py  training.py  transformer_training.py  unet.py
wings/modeling/training/: bced_unet.py  custom_unet_training.py  rect_training.py  resnet_training.py  transformer_training.py  unet_kernel_5x5.py  unet_training.py  unet_training2.py  (+1 more)
wings/visualizing/: image_preprocess.py  visualize.py
(+1 files in other folders)
