[project]
name = "wings"
version = "1.0.0"
description = "Segmentation of bee wing images"
readme = "README.md"
requires-python = ">=3.12,<3.13"

authors = [
  { name = "Mateusz Krajewski" }
]

dependencies = [
    "gradio>=6.1.0",
    "lightning>=2.6.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "opencv-python>=4.12.0.88",
    "pip>=25.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "ultralytics>=8.4.41",
    "wandb>=0.26.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.setuptools.packages.find]
include = ["wings"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.0",
    "pytest-benchmark>=5.2.3",
]
